--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,9 @@
     <meta charset="utf-8" />
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
     <link
-      href="https://fonts.googleapis.com/css?family=Roboto:300,400,500"
       rel="stylesheet"
+      type="text/css"
+      href="//fonts.googleapis.com/css?family=PT+Sans"
     />
     <link
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
